--- a/DMSkin.WPF/ShadowWindow.xaml
+++ b/DMSkin.WPF/ShadowWindow.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title=""
     Width="0"
     Height="0"
@@ -14,8 +13,7 @@
     IsHitTestVisible="False"
     IsTabStop="False"
     ShowInTaskbar="False"
-    WindowStyle="None"
-    mc:Ignorable="d">
+    WindowStyle="None">
     <Grid Margin="30" Background="White">
         <Grid.Effect>
             <DropShadowEffect
